Update dependencies, refactor imports, and modernize Path usage
Upgraded Spring Boot to 3.4.6 and dependencies to newer versions.